Updated the notebook

--- a/reddit-depression-2020.ipynb
+++ b/reddit-depression-2020.ipynb
@@ -7,7 +7,7 @@
     "## 2020 so far: are people more depressed than usual?\n",
     "This has not been an easy year: Australian fires, possibility of a new world war happening, the coronavirus pandemic, world economy shifting and people being forced to stay at home due to lockdown. With so many unexpected challenges, it would be intuitive to assume that our mental health has suffered significantly, probably more so than in previous years.<br><br>In order to confirm this suspicion, I will be analysing data from Reddit – a social news website. Even though the site is in no way representative of the world population (as more than half of its user base is American), it could still be insightful to understand how its users have been impacted.\n",
     "\n",
-    "<b>Here is a quick overview of how Reddit works:</b></br>\n",
+    "<b>Here is a quick overview of how Reddit works:</b>\n",
     "- There are multiple communities called subreddits; each subreddit has a unique name and it is centered around a certain topic in life\n",
     "- People can subscribe to subreddits and submit their own posts (text/pictures/videos), and also comment on each other's submissions\n",
     "- Reddit is usually anonymous, with users having nicknames that could not be linked to their real-world persona.\n",
