Updated Jupyter notebook

--- a/reddit-depression-2020.ipynb
+++ b/reddit-depression-2020.ipynb
@@ -1176,7 +1176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like r/depression_help and r/depression had the biggest overlap of 1,357 authors in the first half of 2020. Interestingly, only 95 authors posted in all three subreddits. This means that the user base of each subreddit is, for the most part, pretty unique (those are all users that have submitted a post, not just subscribers).\n",
+    "It looks like r/depression_help and r/depression had the biggest overlap of 1,452 authors (1,357 + 95) in the first half of 2020. Interestingly, only 95 authors posted in all three subreddits. This means that the user base of each subreddit is, for the most part, pretty unique (those are all users that have submitted a post, not just subscribers).\n",
     "\n",
     "Next, we will look at the some of the differences between 2020 and the previous two years."
    ]
