--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -1,4 +1,18 @@
 {
+ "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Unititled2.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": false
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
  "cells": [
   {
    "cell_type": "code",
@@ -82,26 +96,5 @@
    "outputs": [],
    "source": []
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+ ]
 }
